--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -1,11 +1,11 @@
 ---
-title: "Talk 1 on Relevant Topic in Your Field"
+title: "Optimal Signaling Mechanisms in Unobservable Queues with Strategic Customers"
 collection: talks
 type: "Talk"
-permalink: /talks/2012-03-01-talk-1
-venue: "UC San Francisco, Department of Testing"
-date: 2012-03-01
-location: "San Francisco, California"
+permalink: /talks/ec-17
+venue: "Eighteenth ACM Conference on Economics and Computation"
+date: 2017-06-29
+location: "Cambridge, Massachusetts"
 ---
 
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+[View talk here](https://youtu.be/OWPXy4pKOmg)
